--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
                     <div class="form-group">
                         <div class="input-group">
                             <span class="input-group-addon">$</span>
-                            <input type="number" id="amount" class="form-control" placeholder="Loan Amount">
+                            <input type="number" step="0.01" id="amount" class="form-control" placeholder="Loan Amount">
                         </div>
                     </div>
 
                     <div class="form-group">
                         <div class="input-group">
                             <span class="input-group-addon-1">%</span>
-                            <input type="number" id="interest" class="form-control" placeholder="Intrest">
+                            <input type="number" step="0.01" id="interest" class="form-control" placeholder="Intrest">
                         </div>
                     </div>
 
                     <div class="form-group">
-                        <input type="number" id="years" class="form-control YTR" placeholder="Years To Repay">
+                        <input type="number" step="0.01" id="years" class="form-control YTR" placeholder="Years To Repay">
                     </div>
 
                     <div class="form-group">
